--- a/login and  registration/style.css
+++ b/login and  registration/style.css
@@ -20,7 +20,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
-    background-color: rgba(39, 39, 39, 0.40);
+    background-color: rgba(39, 39, 39, 0.20);
 }
 
 .nav {
@@ -135,4 +135,101 @@ body {
     font-weight: 500;
     color: white;
     margin-left: 5px;
+}
+
+header {
+    color: white;
+    font-size: 30px;
+    justify-content: center;
+    text-align: center;
+    padding: 10px 0 30px 0;
+}
+
+.two-forms {
+    display: flex;
+    gap: 10px;
+}
+
+.input-field {
+    font-size: 15px;
+    background: rgba(255, 255, 255, 0.212);
+    color: white;
+    height: 50px;
+    width: 100%;
+    padding: 0 10px 0 45px;
+    border: none;
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    outline: none;
+    transition: .2s ease;
+    -webkit-transition: .2s ease;
+    -moz-transition: .2s ease;
+    -ms-transition: .2s ease;
+    -o-transition: .2s ease;
+}
+
+::-webkit-input-placeholder {
+    color: white;
+}
+
+.input-field:hover,
+.input-field:focus {
+    background: rgba(255, 255, 255, 0.31);
+}
+
+.input-box i {
+    color: white;
+    position: relative;
+    top: -35px;
+    left: 20px;
+}
+
+.submit {
+    font-size: 15px;
+    width: 100%;
+    height: 45px;
+    border: none;
+    border-radius: 30px;
+    background: rgba(255, 255, 255, 0.702);
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    color: black;
+    cursor: pointer;
+    transition: .3s ease-in-out;
+    -webkit-transition: .3s ease-in-out;
+    -moz-transition: .3s ease-in-out;
+    -ms-transition: .3s ease-in-out;
+    -o-transition: .3s ease-in-out;
+}
+
+.submit:hover {
+    background-color: rgba(255, 255, 255, 0.502);
+    box-shadow: 1px 5px 7px 1px rgba(255, 255, 255, 0.205);
+}
+
+.two-col {
+    display: flex;
+    justify-content: space-between;
+    color: white;
+    font-size: small;
+    margin-top: 10px;
+}
+
+.two label a {
+    display: flex;
+    gap: 5px;
+}
+
+.two label a {
+    text-decoration: none;
+    color: white;
+}
+
+.two label a:hover{
+    text-decoration: underline;
 }
