--- a/login and  registration/style.css
+++ b/login and  registration/style.css
@@ -8,6 +8,8 @@
 }
 
 body {
+    margin: 0;
+    padding: 0;
     background: url(mounten-background.jpg);
     background-repeat: no-repeat;
     background-attachment: fixed;
