--- a/project/product filter/style.css
+++ b/project/product filter/style.css
@@ -11,7 +11,7 @@
 }
 
 body {
-    background-color:rgba(248, 253, 255, 0.562);
+    background-color: rgba(222, 222, 223, 0.151);
 }
 
 .wrapper {
@@ -48,7 +48,7 @@ body {
     margin-top: .5em;
 }
 
-#button  button{
+.button-value {
     border: 2px solid rgb(83, 86, 255);
     color: rgb(83, 86, 255);
     border-radius: .3em;
@@ -58,4 +58,41 @@ body {
     -moz-border-radius: .3em;
     -ms-border-radius: .3em;
     -o-border-radius: .3em;
+    font-weight: 500;
+}
+
+
+.active {
+    background-color: rgb(83, 86, 255);
+    color: white;
+}
+
+#product {
+    margin-top: 30px;
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    gap: 50px 10px;
+}
+
+.card {
+    background-color: white;
+    max-width: 18em;
+    margin-top: 1em;
+    padding: 1em;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    box-shadow: 1em 2em 2.5em #0000002c;
+}
+
+.image-container {
+    text-align: center;
+}
+
+img {
+    max-width: 100%;
+    object-fit: contain;
+    height: 15em;
 }
