--- a/project/product filter/style.css
+++ b/project/product filter/style.css
@@ -46,19 +46,37 @@ body {
     -o-border-radius: .4em;
     font-weight: 500;
     margin-top: .5em;
+    transition: all .4s;
+    -webkit-transition: all .4s;
+    -moz-transition: all .4s;
+    -ms-transition: all .4s;
+    -o-transition: all .4s;
+}
+
+#search-container button:hover {
+    background-color: rgba(83, 86, 255, 0.74);
 }
 
 .button-value {
     border: 2px solid rgb(83, 86, 255);
     color: rgb(83, 86, 255);
-    border-radius: .3em;
+    border-radius: 1.8em;
     background-color: transparent;
     padding: 1em 2.2em;
-    -webkit-border-radius: .3em;
-    -moz-border-radius: .3em;
-    -ms-border-radius: .3em;
-    -o-border-radius: .3em;
-    font-weight: 500;
+    -webkit-border-radius: 1.8em;
+    -moz-border-radius: 1.8em;
+    -ms-border-radius: 1.8em;
+    -o-border-radius: 1.8em;
+    transition: all .4s;
+    -webkit-transition: all .4s;
+    -moz-transition: all .4s;
+    -ms-transition: all .4s;
+    -o-transition: all .4s;
+}
+
+.button-value:hover {
+    background-color: rgb(83, 86, 255);
+    color: white;
 }
 
 
@@ -95,4 +113,35 @@ img {
     max-width: 100%;
     object-fit: contain;
     height: 15em;
+}
+
+.container {
+    padding-top: 1em;
+    color: rgb(83, 86, 255);
+}
+
+.container h5 {
+    font-weight: 500;
+}
+
+@media (max-width:720px) {
+    img{
+        max-width: 100%;
+        object-fit: contain;
+        height: 10em;
+    }
+    
+    .card{
+        max-width: 10em;
+        margin-top: 1em;
+    }
+
+    #product{
+        grid-template-columns: auto auto;
+        grid-column-gap: 1em;
+    }
+}
+
+.hide{
+    display: none;
 }
